<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.MainActivity"
    android:background="@color/colorBlanco"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textoAnimado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoAnimado1"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/textoAnimado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoAnimado2"/>
    <TextView
        android:id="@+id/textoAnimado3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoAnimado3"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_marginTop="30dp">
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAnimar1"
            android:id="@+id/boton1"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAnimar2"
            android:id="@+id/boton2"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAnimar3"
            android:id="@+id/boton3"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAnimar4"
            android:id="@+id/boton4"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAnimar5"
            android:id="@+id/boton5"/>



    </GridLayout>

    <ImageView android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/cohete"
        android:id="@+id/cohete"/>

</LinearLayout>